--- a/conf/gigapaxos.properties
+++ b/conf/gigapaxos.properties
@@ -1,16 +1,16 @@
-# default is NoopApp
 #APPLICATION=edu.umass.cs.reconfiguration.examples.noopsimple.NoopApp
 #APPLICATION=edu.umass.cs.gigapaxos.examples.noop.NoopPaxosApp
+APPLICATION=edu.umass.cs.reconfiguration.examples.linwrites.LinWritesLocReadsApp
 
 GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
 
 # format: active.<active_server_name>=host:port
-active.AR0=127.0.0.1:2000
-active.AR1=127.0.0.1:2001
-active.AR2=127.0.0.1:2002
+active.LWAR0=127.0.0.1:8000
+active.LWAR1=127.0.0.1:8001
+active.LWAR2=127.0.0.1:8002
 
 # format: reconfigurator.<active_server_name>=host:port
-reconfigurator.RC0=127.0.0.1:3000
-reconfigurator.RC1=127.0.0.1:3001
-reconfigurator.RC2=127.0.0.1:3002
+reconfigurator.LWRC0=127.0.0.1:9000
+reconfigurator.LWRC1=127.0.0.1:9001
+reconfigurator.LWRC2=127.0.0.1:9002
 
