Quorum Consistency working

--- a/conf/examples/lazyRep.properties
+++ b/conf/examples/lazyRep.properties
@@ -1,6 +1,6 @@
 # default application is NoopApp
 #APPLICATION=edu.umass.cs.reconfiguration.examples.noopsimple.NoopApp
-#APPLICATION=edu.umass.cs.consistency.lazyReplication.LazyReplicationApp
+APPLICATION=edu.umass.cs.consistency.lazyReplication.LazyReplicationApp
 
 GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
 # chain replication coordinator
