--- a/conf/examples/dynamo.properties
+++ b/conf/examples/dynamo.properties
@@ -4,7 +4,7 @@ APPLICATION=edu.umass.cs.consistency.EventualConsistency.DynamoApp
 
 GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
 # chain replication coordinator
-REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinator
+REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinatorDAG
 # format: active.<active_server_name>=host:port
 active.AR0=127.0.0.1:2000
 active.AR1=127.0.0.1:2001
