--- a/conf/gigapaxos.properties
+++ b/conf/gigapaxos.properties
@@ -1,10 +1,10 @@
 # default application is NoopApp
 #APPLICATION=edu.umass.cs.reconfiguration.examples.noopsimple.NoopApp
-APPLICATION=edu.umass.cs.consistency.ClientCentric.CCApp
+APPLICATION=edu.umass.cs.consistency.EventualConsistency.DynamoApp
 
 GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
 # chain replication coordinator
-REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.ClientCentric.CCCoordinator
+REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinatorDAG
 # format: active.<active_server_name>=host:port
 active.AR0=127.0.0.1:2000
 active.AR1=127.0.0.1:2001
