recovery and state transfer working

--- a/conf/gigapaxos.properties
+++ b/conf/gigapaxos.properties
@@ -4,11 +4,12 @@ APPLICATION=edu.umass.cs.consistency.EventualConsistency.DynamoApp
 
 GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
 # chain replication coordinator
-REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinatorDAG
+REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinator
 # format: active.<active_server_name>=host:port
 active.AR0=127.0.0.1:2000
 active.AR1=127.0.0.1:2001
 active.AR2=127.0.0.1:2002
+active.AR3=127.0.0.1:2003
 
 # format: reconfigurator.<active_server_name>=host:port
 reconfigurator.RC0=127.0.0.1:3000
