--- a/build.xml
+++ b/build.xml
@@ -186,6 +186,9 @@ destfile="${build.jar.dir}/gigapaxos-android-${build.major.number}.${build.minor
     <pathelement location="${lib.dir}/msgpack-core-0.8.8.jar"/>
     <pathelement location="${lib.dir}/jedis-2.8.1.jar"/>
     <pathelement location="${lib.dir}/netty-all-4.1.50.Final.jar"/>
+    <pathelement location="${lib.dir}/jackson-annotations-2.17.2.jar"/>
+    <pathelement location="${lib.dir}/jackson-core-2.17.2.jar"/>
+    <pathelement location="${lib.dir}/jackson-databind-2.17.2.jar"/>
     <!--    <pathelement location="${conf.dir}"/>-->
   </path>
   
