--- a/conf/examples/dynamo.properties
+++ b/conf/examples/dynamo.properties
@@ -1,14 +1,15 @@
-# default application is NoopApp
-#APPLICATION=edu.umass.cs.reconfiguration.examples.noopsimple.NoopApp
+# application is set to a key-value store in DynamoApp
 APPLICATION=edu.umass.cs.consistency.EventualConsistency.DynamoApp
 
-GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
-# chain replication coordinator
-REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinatorDAG
+# DAG replication coordinator
+REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinator
+DAG.REQUESTS_COUNT_BEFORE_CHECKPOINT=6
+DAG.CHECKPOINT_VERSION_THRESHOLD=10
 # format: active.<active_server_name>=host:port
 active.AR0=127.0.0.1:2000
 active.AR1=127.0.0.1:2001
 active.AR2=127.0.0.1:2002
+active.AR3=127.0.0.1:2003
 
 # format: reconfigurator.<active_server_name>=host:port
 reconfigurator.RC0=127.0.0.1:3000
