--- a/conf/gigapaxos.properties
+++ b/conf/gigapaxos.properties
@@ -1,10 +1,10 @@
-# default application is NoopApp
-#APPLICATION=edu.umass.cs.reconfiguration.examples.noopsimple.NoopApp
+# application is set to a key-value store in DynamoApp
 APPLICATION=edu.umass.cs.consistency.EventualConsistency.DynamoApp
 
-GIGAPAXOS_DATA_DIR=/tmp/gigapaxos
-# chain replication coordinator
+# DAG replication coordinator
 REPLICA_COORDINATOR_CLASS=edu.umass.cs.consistency.EventualConsistency.DynamoCoordinator
+DAG.REQUESTS_COUNT_BEFORE_CHECKPOINT=6
+DAG.CHECKPOINT_VERSION_THRESHOLD=10
 # format: active.<active_server_name>=host:port
 active.AR0=127.0.0.1:2000
 active.AR1=127.0.0.1:2001
